* Fixed light tracing when using orthographic camera
* Fixed a light intensity problem with OpenCL rendering when using a mix of materials with emission
* Fixed the support for wrap mode in image maps loaded from files
* Fixed a brightness problem when rendering large images with Metropolis sampler
* Fixed a brightness problem when rendering caustics with PhotonGI caustic cache
* Fixed a bug in Mix material OpenCL code when mixing transparent and not transparent materials
* Fixed a crash when rendering an empty scene with OpenCL and EnvLightVisibilityCache
* Fixed a problem with mesh light sources when deleting an object with LuxCore API (issue #290)
* Fixed a bug when evaluating complex tree of bump mapping nodes (issue #198)

''Beta1 released''

* BAKECPU now correctly includes the dot product of shading normal and light direction in light maps
* Fixed the generation of material/object/volume default random ID (issue #296)
* Fixed bump mapping when using a transformation with negative scale on Z (issue #300)

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* LuxCore API requires latin locale
* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()
* TILEPATHOCL (and RTPATHOCL) count the layers of transparent surfaces as an iteration of the rendering finite state machine so they require to increase the max. path depth to avoid black regions.
* Light emitted by motion blurred triangle lights is approximated using the triangle area of time 0.0 (computing triangle area at runtime would be expansive) so it may be not totally accurate if the motion blur transformation include a scale.
* Variance clamping is not applied to AOVs

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe).