@@ -92,7 +92,7 @@
  <connections>
   <connection>
    <sender>actionQuit</sender>
-   <signal>activated()</signal>
+   <signal>triggered()</signal>
    <receiver>MenuWindow</receiver>
    <slot>close()</slot>
    <hints>
